force-app/main/default/objects/Fraud_Item__c/Fraud_Item__c.object-meta.xml
<CustomObject>
    <label>Fraud Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>