force-app/main/default/objects/Fraud_Item__c/fields/Fraud__c.field-meta.xml
<CustomField>
    <fullName>Fraud__c</fullName>
    <label>Fraud</label>
    <referenceTo>Fraud__c</referenceTo>
    <relationshipLabel>Fraud Items</relationshipLabel>
    <relationshipName>Fraud_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>