force-app/main/default/objects/Fraud_Item__c/fields/Item_Order__c.field-meta.xml
<CustomField>
    <fullName>Item_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Item Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>