force-app/main/default/objects/Fraud_Item__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <length>64</length>
    <type>Text</type>
</CustomField>