force-app/main/default/objects/Fraud_Item__c/fields/Tx_Date__c.field-meta.xml
<CustomField>
    <fullName>Tx_Date__c</fullName>
    <label>Tx Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>